@@ -1350,7 +1350,7 @@ public class XmlParser {
   {
     String name;
     int type;
-    String enum = null;
+    String enumeration = null;
 
 				// Read the attribute name.
     name = readNmtoken(true);
@@ -1362,12 +1362,12 @@ public class XmlParser {
 				// Get the string of enumerated values
 				// if necessary.
     if (type == ATTRIBUTE_ENUMERATED || type == ATTRIBUTE_NOTATION) {
-      enum = dataBufferToString();
+      enumeration = dataBufferToString();
     }
 
 				// Read the default value.
     requireWhitespace();
-    parseDefault(elementName, name, type, enum);
+    parseDefault(elementName, name, type, enumeration);
   }
 
 
@@ -1455,7 +1455,7 @@ public class XmlParser {
     * Parse the default value for an attribute.
     * [62] Default ::= '#REQUIRED' | '#IMPLIED' | ((%'#FIXED' S)? %AttValue
     */
-  void parseDefault (String elementName, String name, int type, String enum)
+  void parseDefault (String elementName, String name, int type, String enumeration)
     throws java.lang.Exception
   {
     int valueType = ATTRIBUTE_DEFAULT_SPECIFIED;
@@ -1481,7 +1481,7 @@ public class XmlParser {
       value = readLiteral(LIT_CHAR_REF);
       context = CONTEXT_DTD;
     }
-    setAttribute(elementName, name, type, enum, value, valueType);
+    setAttribute(elementName, name, type, enumeration, value, valueType);
   }
 
 
